[gd_scene load_steps=2 format=3 uid="uid://dh4eckdue2vu"]

[ext_resource type="Script" path="res://addons/modular_sprite_animation_factory/dock/msaf_dock.gd" id="1_0o686"]

[node name="MSAF" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0o686")

[node name="ScrollContainer" type="ScrollContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
horizontal_scroll_mode = 0

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10

[node name="LibraryTitle" type="Label" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Animation Library"
horizontal_alignment = 1

[node name="LibraryItemList" type="ItemList" parent="ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
allow_reselect = true
allow_search = false
auto_height = true

[node name="Separator0" type="ColorRect" parent="ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2

[node name="SpriteNodeTitle" type="Label" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Sprite2D nodes"
horizontal_alignment = 1

[node name="SpriteNodeItemList" type="ItemList" parent="ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
allow_reselect = true
allow_search = false
auto_height = true
icon_scale = 0.05

[node name="HBoxContainer5" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="SelectAllButton" type="Button" parent="ScrollContainer/VBoxContainer/HBoxContainer5"]
layout_mode = 2
text = "Select all"

[node name="SelectNoneButton" type="Button" parent="ScrollContainer/VBoxContainer/HBoxContainer5"]
layout_mode = 2
text = "Select none"

[node name="Separator1" type="ColorRect" parent="ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2

[node name="AnimationTitle" type="Label" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Animations"
horizontal_alignment = 1

[node name="AnimationItemList" type="ItemList" parent="ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
allow_search = false
auto_height = true

[node name="DeleteAnimButton" type="Button" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Delete selected animation"

[node name="NewAnimTitle" type="Label" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "New animation"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
text = "Animation name: "

[node name="AnimNameLineEdit" type="LineEdit" parent="ScrollContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "i.e. Idle, Walk, Run, Jump, etc"

[node name="HBoxContainer3" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
text = "Loop:"

[node name="LoopCheckButton" type="CheckButton" parent="ScrollContainer/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
text = "Start frame:"

[node name="StartFrameLineEdit" type="LineEdit" parent="ScrollContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "int"

[node name="HBoxContainer4" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer4"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
text = "End frame:"

[node name="EndFrameLineEdit" type="LineEdit" parent="ScrollContainer/VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "int"

[node name="HBoxContainer6" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label2" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer6"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
text = "FPS:"

[node name="FPSLineEdit" type="LineEdit" parent="ScrollContainer/VBoxContainer/HBoxContainer6"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "float"

[node name="AddAnimButton" type="Button" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Add new animation"

[node name="Separator2" type="ColorRect" parent="ScrollContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 2)
layout_mode = 2

[node name="ChangeNotAppliedLabel" type="Label" parent="ScrollContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
theme_override_colors/font_color = Color(1, 0.25, 0.25, 1)
text = "*Changes not applied until you click on Generate"
autowrap_mode = 2

[node name="HBoxContainer7" type="HBoxContainer" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="ScrollContainer/VBoxContainer/HBoxContainer7"]
custom_minimum_size = Vector2(140, 0)
layout_mode = 2
text = "Overwrite existing?"

[node name="OverwriteCheckBox" type="CheckBox" parent="ScrollContainer/VBoxContainer/HBoxContainer7"]
unique_name_in_owner = true
layout_mode = 2

[node name="GenerateButton" type="Button" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Generate"

[node name="RefreshButton" type="Button" parent="ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Refresh"

[node name="AcceptDialog" type="AcceptDialog" parent="."]
unique_name_in_owner = true
title = "Error"

[connection signal="item_selected" from="ScrollContainer/VBoxContainer/LibraryItemList" to="." method="_on_library_item_list_item_selected"]
[connection signal="item_selected" from="ScrollContainer/VBoxContainer/SpriteNodeItemList" to="." method="_on_sprite_node_item_list_item_selected"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/HBoxContainer5/SelectAllButton" to="." method="_on_select_all_button_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/HBoxContainer5/SelectNoneButton" to="." method="_on_select_none_button_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/DeleteAnimButton" to="." method="_on_delete_anim_button_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/AddAnimButton" to="." method="_on_add_anim_button_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/GenerateButton" to="." method="_on_generate_button_pressed"]
[connection signal="pressed" from="ScrollContainer/VBoxContainer/RefreshButton" to="." method="_on_refresh_button_pressed"]
